* Dashboard proposed new implementation, generic for N panels rather than 3 * Switch between 2 modes, fluid or couples resize (still need some fix on couples) * collapsable/expandable

--- a/app/styles/dashboard.less
+++ b/app/styles/dashboard.less
@@ -45,3 +45,13 @@
     background-color: grey;
     bottom: 0px;
 }
+
+
+.pnd-dashboard-panel-separator {
+    position: absolute;
+    right: 0px;
+    width: 15px;
+    background: #666;
+    top: 0px;
+    height: 100%;
+}
